refactor(reporting): 分页参数钳制改用 Math.clamp